# autochat

./: .gitignore  ARVO_ORCHESTRATOR.md  DEPENDENCIES.md  LICENSE  Makefile  README.md  arvo-key.pem  bootstrap.sh  check_deployments.py  deploy.sh  destroy.sh  env.example  main.tf  outputs.tf  pyproject.toml  requirements.txt  switch_nlp_system.py  test_analyzer.py  test_deployment.sh  test_integration.py  test_llm_deploy.py  test_system.py  test_with_keys.py  troubleshoot.sh  variables.tf
arvo/: __init__.py  __main__.py  api.py  api_server.py  cli.py  cli_tool.py  complete_llm_deploy.py  comprehensive_deploy.py  cost.py  events.py  fast_deploy.py  ids.py  infrastructure_types.py  llm_deploy.py  llm_nlp.py  llm_terraform_generator.py  log_viewer.py  openrouter_nlp.py  orchestrator.py  quick_deploy.py  robust_llm.py  simple_analyzer.py  simple_cli.py  simple_deploy.py  simple_nlp_backup.py  smart_deploy.py  state.py  tags.py  terraform.py  ttl.py  ultra_fast_deploy.py  web_interface.py
arvo/analyzer/: __init__.py  detect_common.py  detect_container.py  detect_node.py  detect_python.py  detect_static.py  fetcher.py  heuristics.py  report.py  spec.py  walk.py
arvo/api/: __init__.py  app.py
arvo/cleanup/: __init__.py  models.py  sweep.py
arvo/cli/: __init__.py  main.py
arvo/envman/: __init__.py  collect.py  discover.py  inject.py  plan.py  prepare.py  redact.py  ssm.py
arvo/nlp/: __init__.py  evaluate.py  examples.py  extract.py  normalize.py  providers.py  rules.py  schema.py
arvo/obs/: __init__.py  classify.py  cw_links.py  diag.py  status.py  stream.py
arvo/packaging/docker/: all-in-one.Dockerfile  api.Dockerfile
arvo/patcher/: __init__.py  commands.py  container.py  cors.py  health.py  patcher.py  report.py  rewrites.py  systemd.py
arvo/recipes/: __init__.py  base.py  dockerized.py  next_static.py  node_express.py  python_django.py  python_fastapi.py  python_flask.py  registry.py  smoke.py
arvo/selector/: __init__.py  explain.py  plan.py  rules.py  select.py
arvo/templates/: index.html
arvo/web/: index.html
tests/: test_analyzer_min.py  test_cleanup_basic.py  test_events_status.py  test_nlp_basic.py  test_obs_basic.py  test_patcher_basic.py  test_patcher_synth.py  test_recipes_basic.py  test_selector.py
tests/fixtures_runtime/docker_app/: app.py
tests/fixtures_runtime/express_app/: package.json  server.js
tests/fixtures_runtime/fastapi_app/: main.py
tests/fixtures_runtime/flask_app/: app.py
tests/fixtures_runtime/nextjs_app/: package.json
(+8 files in other folders)
